# gcallm

./: .gitignore  CLAUDE.md  CLEANUP_SUMMARY.md  LICENSE  MCP_SETUP.md  Makefile  PUBLISHING.md  PUBLISHING_TO_PYPI.md  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  TECHNICAL_NOTES.md  TESTING.md  pyproject.toml
.annotations/: PUBLISHING_TO_PYPI.md.json
TODO/: TODO1.txt
gcallm/: agent.py  cli.py  config.py  conflicts.py  formatter.py  formatters.py  interaction.py  screenshot.py
gcallm/helpers/: input.py  input_context.py  input_sources.py
tests/: conftest.py  test_agent.py  test_cli.py  test_conflicts.py  test_formatter.py  test_input.py  test_input_context.py  test_input_sources.py  test_interaction.py  test_screenshot.py  test_xml_prompt.py
