[project]
name = "gcallm"
version = "0.1.0"
description = "Simple CLI to add events to Google Calendar using Claude and natural language"
authors = [
    {name = "Warren Zhu", email = "wzhu@college.harvard.edu"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["calendar", "google-calendar", "cli", "llm", "claude", "natural-language", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "claude-agent-sdk>=0.1.0",
    "python-dateutil>=2.8.0",
]

[project.urls]
Homepage = "https://github.com/WarrenZhu050413/gcallm"
Repository = "https://github.com/WarrenZhu050413/gcallm"
Issues = "https://github.com/WarrenZhu050413/gcallm/issues"

[project.scripts]
gcallm = "gcallm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
